static/css/main.css
/* ... */
section.course-info section.details section p.alert {
    -webkit-border-radius: 5px;
    border-radius: 5px;

    border: 1px solid #c0392b;
    padding: 7px 10px;
    color: #c0392b;
}

section.course-info section.details section p.alert a {
    color: #c0392b;
    text-decoration: underline;
}

section.course-info section.details .inner-wrapper section.course-staff {
    margin-bottom: 0;
}

section.course-info section.details .inner-wrapper section.course-staff article.teacher .teacher-image {
    width: 120px;
    height: 160px;
    margin: 5px 17px 0 0;
}

section.course-info section.details .inner-wrapper section.course-staff article.teacher .teacher-image img {
    width: 120px;
    height: 160px;
}

/* ==========================================================================
   Course info
   ========================================================================== */

.info-wrapper section.updates section article h3 {
    font-size: 0.875em;
    color: #2daae1;
    letter-spacing: 1px;
    text-transform: uppercase;
    margin: 30px 0 0 0;
}

/* ==========================================================================
   Courseware
   ========================================================================== */

.course-wrapper section.course-content article.video-wrapper section.video-controls .vidtime {
    color: white;
}

/* ==========================================================================
   Login page
   ========================================================================== */

.view-login .content-wrapper .introduction > header,
.view-register .content-wrapper .introduction > header,
.view-passwordreset .content-wrapper .introduction > header {
    border-bottom: 1px solid #ddd;
}

.content-wrapper section.login.container section.content {
    width: 70%;
    min-width: 0;
    margin: 0;
    -webkit-box-sizing: border-box;
    -moz-box-sizing: border-box;
    box-sizing: border-box;
    padding 0;
    padding-top: 25px;
}

.content-wrapper section.login.container aside {
    width: 30%;
    padding-left: 33px;
}

section.login #login-form .group-form-requiredinformation .list-input > li {
    position: relative;
}

section.login #login-form .group-form-requiredinformation .list-input > li > input {
    outline: 0;
    box-shadow: none;
    border: 2px solid #ddd;
    -webkit-border-radius: 4px;
    border-radius: 4px;
    font-size: 18px;
    height: 50px;
}

section.login #login-form .group-form-requiredinformation .list-input > li > input + span::after {
    font-family: FontAwesome;
    font-weight: normal;
    font-style: normal;
    display: inline-block;
    text-decoration: inherit;
    position: absolute;
    z-index: 1;
    font-size: 26px;
    top: 13px;
    right: 15px;
}

section.login #login-form .group-form-requiredinformation .list-input > li > input.valid-input {
    border: 2px solid #2ecc71;
}

section.login #login-form .group-form-requiredinformation .list-input > li > input.valid-input + span::after {
    content: "\f058";
    color: #2ecc71;
}

section.login #login-form .group-form-requiredinformation .list-input > li > input.invalid-input {
    border: 2px solid #c0392b;
}

section.login #login-form .group-form-requiredinformation .list-input > li > input.invalid-input + span::after {
    content: "\f057";
    color: #c0392b;
}

section.login #login-form .group-form-requiredinformation .list-input > li > input:focus + span::after {
    opacity: 0.2;
    color: #3ea5ce;
}

section.login #login-form .group-form-requiredinformation .list-input > li:first-child > input{
    margin-bottom: 35px;
}

section.login #login-form .group-form-requiredinformation .list-input > li > input:focus {
    border: 2px solid #3ea5ce;
}

section.login #login-form button[type=submit] {
    width: 20%;
    background-color: #2ecc71;
    color: #fff;
    border: 1px solid transparent;
    box-shadow: none;
    -webkit-border-radius: 4px;
    border-radius: 4px;
    -webkit-transition: all .1s ease-in;
    transition: all .1s ease-in;
}

section.login #login-form button[type=submit]:hover {
    color: #2ecc71;
    border-color: #2ecc71;
    background-color: #fff;
}

section.login #login-form button[type=submit]:focus,
section.login #login-form button[type=submit]:hover {
    outline: 0;
    box-shadow: none;
}

section.login #login-form .status.message {
    border: 0 none;
    box-shadow: none;
}

section.login #login-form .group-form-secondary {
    position: relative;
}

section.login #login-form .customCheckboxLabel {
    display: inline-block;
    position: absolute;
    left: 30px;
    font-style: normal;
    font-size: 17px;
}

/* ==========================================================================
   Register page
   ========================================================================== */

.content-wrapper section.register.container section.content {
    width: 70%;
    min-width: 0;
    margin: 0;
    -webkit-box-sizing: border-box;
    -moz-box-sizing: border-box;
    box-sizing: border-box;
    padding 0;
    padding-top: 25px;
}

.content-wrapper section.register.container aside {
    width: 30%;
    padding-left: 33px;
}

section.register #register-form .group-form-requiredinformation .list-input > li {
    position: relative;
}

section.register #register-form .group-form-requiredinformation .list-input > li > input {
    outline: 0;
    box-shadow: none;
    border: 2px solid #ddd;
    -webkit-border-radius: 4px;
    border-radius: 4px;
    font-size: 18px;
    height: 50px;
}

section.register #register-form .group-form-requiredinformation .list-input > li > input + span::after {
    font-family: FontAwesome;
    font-weight: normal;
    font-style: normal;
    display: inline-block;
    text-decoration: inherit;
    position: absolute;
    z-index: 1;
    font-size: 26px;
    top: 13px;
    right: 15px;
}
/* ... */

